# chat

./: docker-compose.yaml  package-lock.json
backend/: .env  alembic.ini  db.py  main.py  models.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 9ae543ebe350_add_username_and_password_to_users.py  bf26e39bedba_sua_mensagem.py
backend/routes/: messageRoutes.py  userRoutes.py
backend/schemas/: messageSchema.py  userSchema.py
backend/services/: messageService.py  userService.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: GroupModal.vue  MessageInput.vue  MessageList.vue  Navbar.vue  UserList.vue
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/views/: ChatView.vue  LoginView.vue  RegisterView.vue
