[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "pauloricf",email = "pauloricf21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "cffi (==1.17.1)",
    "click (==8.2.1)",
    "colorama (==0.4.6)",
    "cryptography (==45.0.3)",
    "dotenv (==0.9.9)",
    "fastapi (==0.115.12)",
    "greenlet (==3.2.3)",
    "h11 (==0.16.0)",
    "httptools (==0.6.4)",
    "idna (==3.10)",
    "mariadb (==1.1.12)",
    "packaging (==25.0)",
    "pycparser (==2.22)",
    "pydantic (==2.11.5)",
    "pydantic-core (==2.33.2)",
    "pyjwt (==2.10.1)",
    "python-dotenv (==1.1.0)",
    "pyyaml (==6.0.2)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.41)",
    "starlette (==0.46.2)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.0)",
    "uvicorn (==0.34.3)",
    "watchfiles (==1.0.5)",
    "websockets (==15.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
